--- a/src/components/calendar/calendar.css
+++ b/src/components/calendar/calendar.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: '조선일보명조';
-  src: url('/src/assets/') format('truetype');
+  src: url('/src/assets/조선일보명조.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -29,6 +29,10 @@ body {
 .calendar-header button {
   padding: 5px 10px;
   cursor: pointer;
+  background-color: transparent;
+  border: none;
+  color: #434343;
+  font-size: 20px;
 }
 
 .calendar-grid {
@@ -64,43 +68,14 @@ body {
   font-weight: bold;
 }
 
-.emotion-icons,
-.poem-icon,
-.heart-icon,
 .write-btn {
   width: 20px;
   height: 20px;
   position: absolute;
-}
-
-.emotion-icons {
-  bottom: 5px;
-  left: 5px;
-  cursor: pointer;
-}
-
-.poem-icon {
-  bottom: 5px;
-  right: 5px;
-  cursor: pointer;
-}
-
-.heart-icon {
-  top: 5px;
-  right: 5px;
-  cursor: pointer;
-}
-
-.write-btn {
   bottom: 5px;
   right: 5px;
   margin-top: 5px;
   cursor: pointer;
-}
-
-.emotion-icons:hover,
-.heart-icon:hover {
-  transform: scale(1.2);
 }
 
 .date-cell.inactive {
@@ -143,13 +118,8 @@ body {
   line-height: 1.5;
 }
 
-.emotion-detail {
-  font-family: 'KoPubWorld Dotum Light', sans-serif;
-  color: rgba(0, 0, 0, 0.5);
-}
-
 .modal {
-  display: none;
+  display: flex;
   position: fixed;
   z-index: 9999;
   left: 0;
@@ -159,32 +129,19 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
   align-items: center;
-}
-
-.modal {
-  display: flex; /* 기본적으로 flex로 보이게 설정 */
-  position: fixed;
-  z-index: 9999;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  justify-content: center;
-  align-items: center;
-  visibility: hidden; /* 처음에는 숨김 */
-  opacity: 0; /* 처음에는 투명 */
+  visibility: hidden;
+  opacity: 0;
   transition:
     visibility 0s 0.3s,
-    opacity 0.3s linear; /* 애니메이션 효과 */
+    opacity 0.3s linear;
 }
 
 .modal.show {
-  visibility: visible; /* 보이게 */
-  opacity: 1; /* 불투명 */
+  visibility: visible;
+  opacity: 1;
   transition:
     visibility 0s 0s,
-    opacity 0.3s linear; /* 애니메이션 효과 */
+    opacity 0.3s linear;
 }
 
 .modal-content {
