--- a/src/components/common/navbar/navbar.css
+++ b/src/components/common/navbar/navbar.css
@@ -1,13 +1,13 @@
 .navbar {
-  position: fixed; /* 브라우저 스크린에 고정 */
-  top: 20px; /* 상단에서 20px 떨어지게 설정 (필요에 따라 조절) */
-  left: 50%; /* 수평 중앙 설정의 기준점: 브라우저의 50% */
-  transform: translateX(-50%); /* 요소의 너비의 절반만큼 왼쪽으로 이동해 정확한 중앙 배치 */
+  position: fixed; 
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%); 
   background: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   padding: 5px 10px;
-  z-index: 1000; /* 다른 요소 위에 위치하게끔 설정 */
+  z-index: 1000; 
 }
 .navbar ul {
   list-style: none;
@@ -24,10 +24,10 @@
   transition: 0.3s;
 }
 .navbar a.active {
-  background-color: #e1e1e1; /* 회색 배경 */
-  border-radius: 10px; /* 둥근 모서리 */
-  padding: 2px 7px; /* 내부 여백 (글자 주위 공간) */
-  color: #4a4a4a; /* 글자 색은 기본 색상 유지하거나 필요 시 변경 */
+  background-color: #e1e1e1; 
+  border-radius: 10px; 
+  padding: 2px 7px; 
+  color: #4a4a4a; 
   margin: auto;
 }
 .navbar a:hover {
