--- a/src/components/likedPoems/likedPoems.css
+++ b/src/components/likedPoems/likedPoems.css
@@ -24,7 +24,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  text-align: center; /* 텍스트 중앙 정렬 */
+  text-align: center; 
 }
 .poem-content {
   flex: 1;
@@ -35,29 +35,29 @@ body {
   justify-content: space-between;
   align-items: center;
 }
-/* 감정 아이콘 영역 */
+
 .emotion-icons {
   display: flex;
   gap: 10px;
   margin-top: 10px;
 }
 .emotion {
-  width: 32px; /* 이모티콘 크기 */
-  height: 32px; /* 크기 조절 */
+  width: 32px; 
+  height: 32px; 
   cursor: pointer;
   transition: transform 0.2s;
 }
 .emotion:hover {
-  transform: scale(1.2); /* 마우스를 올리면 확대 효과 */
+  transform: scale(1.2); 
 }
 .heart {
-  width: 28px; /* 이모티콘 크기 */
-  height: 28px; /* 크기 조절 */
+  width: 28px; 
+  height: 28px; 
   cursor: pointer;
   transition: transform 0.2s;
 }
 .heart:hover {
-  transform: scale(1.2); /* 마우스를 올리면 확대 효과 */
+  transform: scale(1.2); 
 }
 .heart-btn {
   background: none;
