경로 수정  / POST 요청 추가 / 로그인-로그아웃, 회원가입 통합

--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -8,6 +8,12 @@ body {
   background: linear-gradient(to right, #e6e6fa, #fdebef);
 }
 
+.login-btn {
+  position: fixed;
+  top: 20px;
+  right: 45px;
+}
+
 /* 중앙 정렬 컨테이너 */
 .center-container {
   display: flex;
