--- a/src/components/calendar/modal/diaryModal.css
+++ b/src/components/calendar/modal/diaryModal.css
@@ -26,6 +26,8 @@
     opacity 0.3s linear;
 
   color: rgba(0, 0, 0, 0.8);
+
+  font-family: 'KoPubWorld Dotum Light';
 }
 
 .modal.show {
@@ -44,7 +46,7 @@
   font-size: 18px;
   animation: fadeIn 0.3s ease;
   position: relative;
-  min-width: 450px;
+  min-width: 600px;
 }
 
 .close-btn {
@@ -71,7 +73,7 @@
 .card {
   flex: 1;
   background-color: #f0f0f0;
-  padding: 16px;
+  padding: 30px;
   border-radius: 8px;
   box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.05);
 }
@@ -82,5 +84,5 @@
 
 .content-text {
   white-space: pre-wrap;
-  font-size: 16px;
+  font-size: 15px;
 }
